###########################################################
##               Plugins
###########################################################

add_subdirectory(GUIExtender)
add_subdirectory(Calibration)
add_subdirectory(Algorithm)
add_subdirectory(UsReconstruction)
add_subdirectory(Acquisition)
add_subdirectory(Registration)
